--- a/deno_component_workspace_example/deno_lib_libmainworker_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_lib_libmainworker_example/Cargo.toml
@@ -19,10 +19,15 @@ color-print = "0.3.7"
 console_static_text = "0.8.3"
 crossterm = "0.29.0"
 dashmap = "6.1.0"
+deno_ast = "0.49.0"
 deno_core = "0.355.0"
 deno_error = "0.7.0"
+deno_graph = "0.99.0"
 deno_lib = "0.32.0"
+deno_media_type = "0.2.0"
 deno_npm = "0.38.0"
+deno_path_util = "0.4.0"
+deno_permissions = "0.73.0"
 deno_resolver = { version = "0.45.0", features = ["deno_ast", "graph", "sync"] }
 deno_runtime = { version = "0.222.0", features = ["include_js_files_for_snapshotting"] }
 deno_semver = "0.9.0"
@@ -33,6 +38,7 @@ dprint-plugin-json = "0.20.0"
 dprint-plugin-jupyter = "0.2.0"
 dprint-plugin-markdown = "0.19.0"
 dprint-plugin-typescript = "0.95.9"
+env_logger = "0.11.0"
 esbuild_client = "0.5.0"
 eszip = "0.97.0"
 faster-hex = "0.10.0"
@@ -75,7 +81,7 @@ shell-escape = "0.1.5"
 spki = "0.7.3"
 sqlformat = "0.3.5"
 strsim = "0.11.1"
-sys_traits = { version = "0.1.17", features = ["real"] }
+sys_traits = { version = "0.1.17", features = ["memory", "real"] }
 tar = "0.4"
 tempfile = "3.20.0"
 text-size = "1.1.1"
@@ -98,3 +104,15 @@ path = "src/npm_example.rs"
 [[bin]]
 name = "unconfigured_runtime_example"
 path = "src/unconfigured_runtime_example.rs"
+
+[[bin]]
+name = "cli_loader_example"
+path = "src/cli_loader_example.rs"
+
+[[bin]]
+name = "integrated_loader_example"
+path = "src/integrated_loader_example.rs"
+
+[[bin]]
+name = "simple_cli_example"
+path = "src/simple_cli_example.rs"
