--- a/deno_component_workspace_example/denort/Cargo.toml
+++ b/deno_component_workspace_example/denort/Cargo.toml
@@ -15,43 +15,43 @@ harness = false
 
 [dependencies]
 async-trait = "0.1.89"
-bincode = "1.3.3"
-deno_cache_dir = { version = "0.25.0", features = ["sync"] }
-deno_config = { version = "0.65.0", features = ["sync", "workspace"] }
+bincode = "=1.3.3"
+deno_cache_dir = { version = "=0.25.0", features = ["sync"] }
+deno_config = { version = "0.66.0", features = ["sync", "workspace"] }
 deno_core = { version = "0.357.0", features = ["include_js_files_for_snapshotting"] }
-deno_error = "0.7.0"
-deno_lib = "=0.33.0"
-deno_media_type = { version = "0.2.9", features = ["data_url", "decoding"] }
-deno_npm = "0.38.0"
-deno_package_json = { version = "0.17.0", features = ["sync"] }
-deno_path_util = "0.6.1"
-deno_resolver = { version = "0.46.0", features = ["sync"] }
-deno_runtime = { version = "0.223.0", features = ["include_js_files_for_snapshotting"] }
-deno_semver = "0.9.0"
-deno_snapshots = "0.30.0"
-deno_terminal = "0.2.2"
-hstr = "2.0.1"
-import_map = "0.23.0"
-indexmap = "2.11.1"
+deno_doc = "=0.183.0"
+deno_error = "=0.7.0"
+deno_lib = "0.34.0"
+deno_media_type = { version = "=0.2.9", features = ["data_url", "decoding"] }
+deno_npm = "=0.38.1"
+deno_package_json = { version = "0.18.0", features = ["sync"] }
+deno_path_util = "=0.6.1"
+deno_resolver = { version = "0.47.0", features = ["sync"] }
+deno_runtime = { version = "0.224.0", features = ["include_js_files_for_snapshotting"] }
+deno_semver = "=0.9.0"
+deno_snapshots = "0.31.0"
+deno_terminal = "=0.2.2"
+import_map = { version = "0.23.0", features = ["ext"] }
+indexmap = { version = "2", features = ["serde"] }
 libsui = "0.10.0"
 log = { version = "0.4.28", features = ["serde"] }
-node_resolver = "0.53.0"
-rustls = "0.23"
-serde = "1.0.219"
-serde_json = "1.0.143"
+node_resolver = "0.54.0"
+rustls = { version = "=0.23.28", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
+serde = { version = "=1.0.221", features = ["derive"] }
+serde_json = "1.0.145"
 sys_traits = { version = "0.1.17", features = ["getrandom", "filetime", "libc", "real", "strip_unc", "winapi"] }
 thiserror = "2.0.16"
 timezone_provider = "=0.0.14"
 tokio = { version = "1.47.1", features = ["full"] }
-url = "2.5.7"
+url = { version = "2.5", features = ["serde", "expose_internals"] }
 
 [target.'cfg(windows)'.dependencies]
 memmap2 = "0.9.8"
-deno_subprocess_windows = "0.10.0"
+deno_subprocess_windows = "0.11.0"
 
 [dev-dependencies]
 sys_traits = { version = "0.1.17", features = ["memory"] }
 
 [build-dependencies]
 deno_core = { version = "0.357.0", features = ["include_js_files_for_snapshotting"] }
-deno_runtime = { version = "0.223.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
+deno_runtime = { version = "0.224.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
