--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -18,23 +18,23 @@ deno_ast = { version = "0.50.0", features = [
   "utils",
 ] }
 deno_bundle_runtime = "0.4.0"
-deno_cache_dir = { version = "0.25.0", features = ["sync"] }
+deno_cache_dir = { version = "=0.25.0", features = ["sync"] }
 deno_config = { version = "0.67.0", features = ["sync", "workspace"] }
 deno_core = { version = "0.362.0", features = [
   "include_js_files_for_snapshotting",
 ] }
-deno_doc = { version = "0.184.0", features = ["rust", "comrak"] }
-deno_error = "0.7.0"
+deno_doc = { version = "=0.184.0", features = ["rust", "comrak"] }
+deno_error = "=0.7.0"
 deno_graph = { version = "=0.101.0", default-features = false, features = ["fast_check"] }
 deno_lib = "0.35.0"
-deno_lint = "0.80.0"
-deno_lockfile = "0.32.0"
-deno_media_type = { version = "0.2.9", features = [
+deno_lint = "=0.80.0"
+deno_lockfile = "=0.32.0"
+deno_media_type = { version = "=0.2.9", features = [
   "data_url",
   "decoding",
   "module_specifier",
 ] }
-deno_npm = "0.40.0"
+deno_npm = "=0.40.0"
 deno_npm_cache = "0.36.0"
 deno_npm_installer = "0.12.0"
 deno_package_json = { version = "0.19.0", features = ["sync"] }
@@ -44,12 +44,12 @@ deno_resolver = { version = "0.48.0", features = ["deno_ast", "graph", "sync"] }
 deno_runtime = { version = "0.225.0", features = [
   "include_js_files_for_snapshotting",
 ] }
-deno_semver = "0.9.0"
+deno_semver = "=0.9.0"
 deno_signals = "0.8.0"
 deno_snapshots = "0.32.0"
 deno_task_shell = "0.26.1"
-deno_terminal = "0.2.2"
-eszip = "0.101.0"
+deno_terminal = "=0.2.2"
+eszip = "=0.101.0"
 libsui = "0.10.0"
 node_resolver = { version = "0.55.0", features = ["graph", "sync"] }
 
