--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -4,6 +4,24 @@ version = "2.5.2"
 edition = "2024"
 
 [dependencies]
+
+anstream = "0.6.20"
+async-trait = "0.1.89"
+aws-lc-rs = "1.14.1"
+base64 = "0.22.1"
+bincode = "=1.3.3"
+boxed_error = "0.2.3"
+bytes = "1.10.1"
+bytes-str = "0.2.7"
+capacity_builder = "0.5.0"
+chrono = { version = "0.4.42", features = ["now"] }
+clap = { version = "4.5.48", features = ["env", "string", "wrap_help", "error-context"] }
+clap_complete = "4.5.58"
+clap_complete_fig = "4.5.2"
+color-print = "0.3.7"
+console_static_text = "0.8.3"
+crossterm = "0.29.0"
+dashmap = "6.1.0"
 deno_ast = { version = "0.50.0", features = [
   "bundler",
   "cjs",
@@ -39,7 +57,7 @@ deno_npm_cache = "0.36.0"
 deno_npm_installer = "0.12.0"
 deno_package_json = { version = "0.19.0", features = ["sync"] }
 deno_panic = { version = "0.1.0", optional = true }
-deno_path_util = "0.6.1"
+deno_path_util = "=0.6.1"
 deno_resolver = { version = "0.48.0", features = ["deno_ast", "graph", "sync"] }
 deno_runtime = { version = "0.225.0", features = [
   "include_js_files_for_snapshotting",
@@ -47,38 +65,18 @@ deno_runtime = { version = "0.225.0", features = [
 deno_semver = "=0.9.0"
 deno_signals = "0.8.0"
 deno_snapshots = "0.32.0"
-deno_task_shell = "0.26.1"
+deno_task_shell = "=0.26.0"
 deno_terminal = "=0.2.2"
-eszip = "=0.101.0"
-libsui = "0.10.0"
-node_resolver = { version = "0.55.0", features = ["graph", "sync"] }
-
-anstream = "0.6.20"
-async-trait = "0.1.89"
-aws-lc-rs = "1.14.1"
-base64 = "0.22.1"
-bincode = "=1.3.3"
-boxed_error = "0.2.3"
-bytes = "1.10.1"
-bytes-str = "0.2.7"
-capacity_builder = "0.5.0"
-chrono = { version = "0.4.42", features = ["now"] }
-clap = { version = "4.5.48", features = ["env", "string", "wrap_help", "error-context"] }
-clap_complete = "4.5.58"
-clap_complete_fig = "4.5.2"
-color-print = "0.3.7"
-console_static_text = "0.8.3"
-crossterm = "0.29.0"
-dashmap = "6.1.0"
 dhat = { version = "0.3.3", optional = true }
 dissimilar = "=1.0.9"
 dotenvy = "0.15.7"
-dprint-core = "0.67.4"
-dprint-plugin-json = "0.20.0"
-dprint-plugin-jupyter = "0.2.0"
-dprint-plugin-markdown = "0.19.0"
-dprint-plugin-typescript = "0.95.11"
+dprint-core = "=0.67.4"
+dprint-plugin-json = "=0.20.0"
+dprint-plugin-jupyter = "=0.2.0"
+dprint-plugin-markdown = "=0.19.0"
+dprint-plugin-typescript = "=0.95.11"
 esbuild_client = { version = "0.7.1", features = ["serde"] }
+eszip = "=0.101.0"
 fancy-regex = "0.16.2"
 faster-hex = "0.10.0"
 flate2 = "1.1.2"
@@ -94,6 +92,7 @@ jupyter_runtime = { package = "runtimelib", version = "=0.28.0", default-feature
 keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "windows-native", "vendored"] }
 lazy-regex = "3.4.1"
 libc = "0.2.176"
+libsui = "0.10.0"
 libz-sys = "1.1.22"
 log = { version = "0.4.28", features = ["serde"] }
 lol_html = "2.6.0"
@@ -101,7 +100,8 @@ lsp-types = "0.97.0"
 malva = "0.14.3"
 markup_fmt = "0.24.0"
 memchr = "2.7.6"
-notify = "8.2.0"
+node_resolver = { version = "0.55.0", features = ["graph", "sync"] }
+notify = "=6.1.1"
 once_cell = "1.21.3"
 open = "5.3.2"
 opentelemetry = "0.31.0"
@@ -112,15 +112,15 @@ p256 = "0.13.2"
 pathdiff = "0.2.3"
 percent-encoding = "2.3.2"
 phf = "0.13.1"
-pretty_yaml = "0.5.1"
+pretty_yaml = "=0.5.0"
 quick-junit = "0.5.1"
-rand = { version = "0.9.2", features = ["small_rng"] }
+rand = { version = "=0.8.5", features = ["small_rng"] }
 regex = "1.11.3"
 rustc-hash = "2.1.1"
-rustls = "=0.23.28"
-rustyline = "17.0.1"
-rustyline-derive = "0.11.1"
-serde = "=1.0.221"
+rustls = { version = "=0.23.28", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
+rustyline = "=13.0.0"
+rustyline-derive = "=0.7.0"
+serde = { version = "=1.0.221", features = ["derive"] }
 serde_repr = "0.1.20"
 sha2 = "0.10.9"
 spki = { version = "0.7.3", features = ["pem"] }
@@ -132,23 +132,22 @@ tempfile = "3.23.0"
 text-size = "1.1.1"
 text_lines = "0.6.0"
 thiserror = "2.0.17"
+timezone_provider = "=0.0.14"
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-util = "0.7.16"
 tower = "0.5.2"
-tower-lsp = "0.20.0"
+tower-lsp = { package = "deno_tower_lsp", version = "=0.4.3", features = ["proposed"] }
 tracing = { version = "0.1.41", features = ["log"], optional = true }
 tracing-opentelemetry = { version = "0.32.0", optional = true }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }
-twox-hash = "=2.1.0"
-typed-arena = "2.0.2"
+twox-hash = { version = "=2.1.0", features = ["std", "xxhash64"], default-features = false }
+typed-arena = "=2.0.2"
 unicode-width = "0.2.1"
 uuid = { version = "1.18.1", features = ["serde"] }
-walkdir = "2.5.0"
+walkdir = "=2.5.0"
 weak-table = "0.3.2"
 zip = { version = "5.1.1", features = ["deflate-flate2"] }
-zstd = "0.13.3"
-
-
+zstd = "=0.13.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }
@@ -157,7 +156,6 @@ deno_subprocess_windows = "0.12.0"
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
 shell-escape = "0.1.5"
-
 
 [target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos"))'.dependencies]
 tokio-vsock = "0.7.2"
