--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -4,7 +4,6 @@ version = "2.5.2"
 edition = "2024"
 
 [dependencies]
-
 anstream = "0.6.20"
 async-trait = "0.1.89"
 aws-lc-rs = "1.14.1"
@@ -52,7 +51,7 @@ deno_media_type = { version = "=0.2.9", features = [
   "decoding",
   "module_specifier",
 ] }
-deno_npm = "=0.40.0"
+deno_npm = "=0.38.1"
 deno_npm_cache = "0.36.0"
 deno_npm_installer = "0.12.0"
 deno_package_json = { version = "0.19.0", features = ["sync"] }
@@ -66,6 +65,7 @@ deno_semver = "=0.9.0"
 deno_signals = "0.8.0"
 deno_snapshots = "0.32.0"
 deno_task_shell = "=0.26.0"
+deno_telemetry = "0.39.0"
 deno_terminal = "=0.2.2"
 dhat = { version = "0.3.3", optional = true }
 dissimilar = "=1.0.9"
@@ -79,7 +79,6 @@ esbuild_client = { version = "0.7.1", features = ["serde"] }
 eszip = "=0.101.0"
 fancy-regex = "0.16.2"
 faster-hex = "0.10.0"
-flate2 = "1.1.2"
 fs3 = "0.5.0"
 http = "1.3.1"
 http-body = "1.0.1"
@@ -169,24 +168,32 @@ deno_core = { version = "0.362.0", features = [
 pretty_assertions = "1.4.1"
 sys_traits = { version = "0.1.17", features = ["memory"] }
 
+[build-dependencies]
+deno_core = { version = "0.362.0", features = ["include_js_files_for_snapshotting"] }
+deno_runtime = { version = "0.225.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
+lazy-regex = "3.4.1"
+serde = { version = "=1.0.221", features = ["derive"] }
+serde_json = "1.0.145"
+zstd = "=0.13.2"
+flate2 = { version = "1.1.2", features = ["default"] }
+deno_error = "=0.7.0"
 
-
-# [features]
-# default = ["upgrade", "__vendored_zlib_ng"]
-# # A feature that enables heap profiling with dhat on Linux.
-# # 1. Compile with `cargo build --profile=release-with-debug --features=dhat-heap`
-# # 2. Run the executable. It will output a dhat-heap.json file.
-# # 3. Open the json file in https://nnethercote.github.io/dh_view/dh_view.html
-# dhat-heap = ["dhat"]
-# # A feature that enables the upgrade subcommand and the background check for
-# # available updates (of deno binary). This is typically disabled for (Linux)
-# # distribution packages.
-# upgrade = []
-# # A dev feature to disable creations and loading of snapshots in favor of
-# # loading JS sources at runtime.
-# hmr = ["deno_runtime/hmr", "deno_snapshots/disable"]
-# # Vendor zlib as zlib-ng
-# __vendored_zlib_ng = ["flate2/zlib-ng-compat", "libz-sys/zlib-ng"]
-# lsp-tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-opentelemetry"]
-# # Custom panic trace with `deno_panic`
-# panic-trace = ["deno_panic"]
+[features]
+default = ["upgrade", "__vendored_zlib_ng"]
+# A feature that enables heap profiling with dhat on Linux.
+# 1. Compile with `cargo build --profile=release-with-debug --features=dhat-heap`
+# 2. Run the executable. It will output a dhat-heap.json file.
+# 3. Open the json file in https://nnethercote.github.io/dh_view/dh_view.html
+dhat-heap = ["dhat"]
+# A feature that enables the upgrade subcommand and the background check for
+# available updates (of deno binary). This is typically disabled for (Linux)
+# distribution packages.
+upgrade = []
+# A dev feature to disable creations and loading of snapshots in favor of
+# loading JS sources at runtime.
+hmr = ["deno_runtime/hmr", "deno_snapshots/disable"]
+# Vendor zlib as zlib-ng
+__vendored_zlib_ng = ["flate2/zlib-ng-compat", "libz-sys/zlib-ng"]
+lsp-tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-opentelemetry"]
+# Custom panic trace with `deno_panic`
+panic-trace = ["deno_panic"]
