--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -40,9 +40,9 @@ deno_config = { version = "0.67.0", features = ["sync", "workspace"] }
 deno_core = { version = "0.362.0", features = [
   "include_js_files_for_snapshotting",
 ] }
-deno_doc = { version = "=0.184.0", features = ["rust", "comrak"] }
+deno_doc = { version = "=0.183.0", features = ["rust", "comrak"] }
 deno_error = "=0.7.0"
-deno_graph = { version = "=0.101.0", default-features = false, features = ["fast_check"] }
+deno_graph = { version = "=0.100.1", default-features = false, features = ["fast_check"] }
 deno_lib = "0.35.0"
 deno_lint = "=0.80.0"
 deno_lockfile = "=0.32.0"
@@ -76,17 +76,18 @@ dprint-plugin-jupyter = "=0.2.0"
 dprint-plugin-markdown = "=0.19.0"
 dprint-plugin-typescript = "=0.95.11"
 esbuild_client = { version = "0.7.1", features = ["serde"] }
-eszip = "=0.101.0"
+eszip = "=0.99.0"
 fancy-regex = "0.16.2"
 faster-hex = "0.10.0"
+flate2 = { version = "1.1.2", features = ["default"] }
 fs3 = "0.5.0"
 http = "1.3.1"
 http-body = "1.0.1"
 http-body-util = "0.1.3"
-import_map = "0.23.0"
-indexmap = "2.11.4"
+import_map = { version = "0.23.0", features = ["ext"] }
+indexmap = { version = "2", features = ["serde"] }
 jsonc-parser = { version = "0.26.3", features = ["cst", "serde"] }
-jupyter-protocol = "0.9.0"
+jupyter-protocol = "=0.8.0"
 jupyter_runtime = { package = "runtimelib", version = "=0.28.0", default-features = false, features = ["tokio-runtime", "aws-lc-rs"] }
 keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "windows-native", "vendored"] }
 lazy-regex = "3.4.1"
@@ -110,7 +111,7 @@ opentelemetry_sdk = "0.31.0"
 p256 = "0.13.2"
 pathdiff = "0.2.3"
 percent-encoding = "2.3.2"
-phf = "0.13.1"
+phf = { version = "=0.11", features = ["macros"] }
 pretty_yaml = "=0.5.0"
 quick-junit = "0.5.1"
 rand = { version = "=0.8.5", features = ["small_rng"] }
@@ -153,7 +154,7 @@ winapi = { version = "0.3.9", features = ["knownfolders", "mswsock", "objbase", 
 deno_subprocess_windows = "0.12.0"
 
 [target.'cfg(unix)'.dependencies]
-nix = "0.30.1"
+nix = "=0.27.1"
 shell-escape = "0.1.5"
 
 [target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos"))'.dependencies]
