--- a/deno_component_workspace_example/embed_deno/Cargo.toml
+++ b/deno_component_workspace_example/embed_deno/Cargo.toml
@@ -20,6 +20,11 @@ hmr = ["deno_runtime/hmr", "deno_snapshots/disable"]
 # Vendor zlib as zlib-ng
 __vendored_zlib_ng = ["flate2/zlib-ng-compat", "libz-sys/zlib-ng"]
 lsp-tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-opentelemetry"]
+# Enable the (vendored) Deno LSP implementation.
+#
+# This is not required for `embed_deno`'s embedding-focused `run` path, and it
+# pulls in the full CLI flag parser surface (clap) in upstream Deno.
+lsp = []
 # Custom panic trace with `deno_panic`
 panic-trace = ["deno_panic"]
 
