--- a/rand_workspace_example/rand_core_example/Cargo.toml
+++ b/rand_workspace_example/rand_core_example/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand_core = { version = "0.9.3", features = ["os_rng"] }
+rand_core = "0.10.0"
+getrandom = "0.4"
