--- a/rand_workspace_example/rand_rngcore_example/Cargo.toml
+++ b/rand_workspace_example/rand_rngcore_example/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rand_core = { version = "0.9.3", features = ["os_rng"] }
+rand_core = "0.10.0"
