--- a/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
+++ b/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
@@ -72,6 +72,7 @@ quick-junit = "=0.3.6"
 rand = { version = "=0.8.5", features = ["small_rng"] }
 regex = "1.12.3"
 rustc-hash = "2.1.1"
+rustls = { version = "=0.23.28", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
 rustyline = "=13.0.0"
 rustyline-derive = "=0.7.0"
 serde = { version = "1.0.228", features = ["derive"] }
