--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -201,5 +201,5 @@ members = [
   "tokio_once_cell_mutex_timeout_example",
   "once_cell_const_new_example",
   "tokio_struct_future_example",
-  "tokio_vsock_test_server_example",
+  "tokio_vsock_test_server_example", "duplexstream_example",
 ]
