--- a/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
+++ b/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1.89"
+axum = { version = "0.8", features = ["macros"] }
 aws-lc-rs = "1.15.4"
 base64 = "0.22.1"
 bincode = "=1.3.3"
