--- a/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
+++ b/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1.89"
-axum = { version = "0.8", features = ["macros"] }
 aws-lc-rs = "1.15.4"
+axum = { version = "0.8", features = ["macros"] }
 base64 = "0.22.1"
 bincode = "=1.3.3"
 boxed_error = "0.2.3"
@@ -21,11 +21,13 @@ console_static_text = "0.8.3"
 crossterm = "0.29.0"
 dashmap = "6.1.0"
 deno_ast = "0.52.0"
+deno_cache_dir = { version = "=0.26.3", features = ["sync"] }
 deno_core = "0.383.0"
 deno_error = "0.7.1"
 deno_graph = "=0.106.0"
 deno_lib = "0.48.0"
 deno_npm = "0.43.0"
+deno_npm_cache = "0.49.0"
 deno_path_util = "0.6.4"
 deno_permissions = "0.89.0"
 deno_resolver = { version = "0.61.0", features = ["deno_ast", "graph", "sync"] }
@@ -92,6 +94,7 @@ tokio = { version = "1.49.0", features = ["full"] }
 tokio-util = "0.7.18"
 typed-arena = "2.0.2"
 unicode-width = "0.2.2"
+ureq = "=3.1.4"
 uuid = "1.20.0"
 walkdir = "2.5.0"
 zip = { version = "=2.4.1", default-features = false, features = ["flate2"] }
